--- a/nginx.conf
+++ b/nginx.conf
@@ -52,12 +52,13 @@ http {
     }
 
     location = /mypage {
+      mruby_rewrite_handler '/home/isucon/webapp/isu4qualifier_mruby/mypage_rewrite.rb' cache;
       mruby_content_handler '/home/isucon/webapp/isu4qualifier_mruby/mypage.rb' cache;
       break;
     }
 
     location = /login {
-      mruby_content_handler '/home/isucon/webapp/isu4qualifier_mruby/login.rb' cache;
+      mruby_rewrite_handler '/home/isucon/webapp/isu4qualifier_mruby/login.rb' cache;
       break;
     }
   }
