Nginx::Request.args -> Nginx::Request.var.args

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,9 @@ http {
 
   server_tokens    off;
 
+  set_real_ip_from   127.0.0.1;
+  real_ip_header     X-Forwarded-For;
+
   server {
     location ~ ^/(images|stylesheets) {
       access_log off;
