--- a/nginx.conf
+++ b/nginx.conf
@@ -61,6 +61,7 @@ http {
     }
 
     location = /login {
+      rewrite_request_body;
       mruby_rewrite_handler '/home/isucon/webapp/isu4qualifier_mruby/login.rb' cache;
       break;
     }
