read request body

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,8 +32,8 @@ http {
   client_header_timeout        5;
   client_body_timeout          5;
   client_body_temp_path        /dev/shm/client_temp 1 2 3;
-  client_max_body_size         10m;
-  client_body_buffer_size      32k;
+  client_max_body_size         1m;
+  client_body_buffer_size      1m;
   client_header_buffer_size    2k;
   large_client_header_buffers  4 8k;
 
@@ -61,7 +61,6 @@ http {
     }
 
     location = /login {
-      rewrite_request_body;
       mruby_rewrite_handler '/home/isucon/webapp/isu4qualifier_mruby/login.rb' cache;
       break;
     }
