use mruby_init directives

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,9 @@ events {
 }
 
 http {
+
+  mruby_init '/home/isucon/webapp/isu4qualifier_mruby/bootstrap.rb' cache;
+
   log_format  main  '"$http_x_forwarded_for" '
                     '"$request" '
                     '$request_time';
@@ -43,9 +46,10 @@ http {
   real_ip_header     X-Forwarded-For;
 
   server {
+    root /dev/shm/public;
+
     location ~ ^/(images|stylesheets) {
       access_log off;
-      root /dev/shm/public;
       break;
     }
 
@@ -63,6 +67,10 @@ http {
     location = /login {
       mruby_rewrite_handler '/home/isucon/webapp/isu4qualifier_mruby/login.rb' cache;
       break;
+    }
+
+    location / {
+      return 404;
     }
   }
 }
