for read request_body

--- a/nginx.conf
+++ b/nginx.conf
@@ -65,6 +65,8 @@ http {
     }
 
     location = /login {
+      set_form_input $login;
+      set_form_input $password;
       mruby_rewrite_handler '/home/isucon/webapp/isu4qualifier_mruby/login.rb' cache;
       break;
     }
