--- a/nginx.conf
+++ b/nginx.conf
@@ -54,19 +54,19 @@ http {
     }
 
     location = / {
-      mruby_content_handler '/home/isucon/webapp/isu4qualifier_mruby/index.rb' cache;
+      mruby_content_handler /home/isucon/webapp/isu4qualifier_mruby/index.rb cache;
       break;
     }
 
     location = /mypage {
-      mruby_content_handler '/home/isucon/webapp/isu4qualifier_mruby/mypage.rb' cache;
+      mruby_content_handler /home/isucon/webapp/isu4qualifier_mruby/mypage.rb cache;
       break;
     }
 
     location = /login {
       set_form_input $login;
       set_form_input $password;
-      mruby_rewrite_handler '/home/isucon/webapp/isu4qualifier_mruby/login.rb' cache;
+      mruby_rewrite_handler /home/isucon/webapp/isu4qualifier_mruby/login.rb cache;
       break;
     }
 
