--- a/nginx.conf
+++ b/nginx.conf
@@ -14,13 +14,9 @@ events {
 
 http {
 
-  mruby_init '/home/isucon/webapp/isu4qualifier_mruby/bootstrap.rb' cache;
+  mruby_init /home/isucon/webapp/isu4qualifier_mruby/bootstrap.rb cache;
 
-  log_format  main  '"$http_x_forwarded_for" '
-                    '"$request" '
-                    '$request_time';
-
-  access_log  /var/log/nginx/access.log  main;
+  access_log  off;
 
   include /etc/nginx/mime.types;
   sendfile               on;
