--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
-worker_processes  4;
+worker_processes  1;
 user nginx;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  off;
 pid        /var/run/nginx.pid;
 
 worker_rlimit_nofile  20000;
